--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
         }
 
     </script>
+    <script>
+        var x = 40
+        switch (true) {
+            case (x >= 80 && x <= 100):
+                document.write("Your grade is A+");
+                break;
+            case (x >= 70 && x <= 80):
+                document.write('Your grade is  A');
+                break;
+            case (x >= 60 && x <= 70):
+                document.write("Your grade is B+")
+                break;
+            default:
+                document.write("You are fail")
+
+        }
+
+    </script>
 </body>
 
 
