--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         }
 
     </script>
+    <script>
+        var i;
+        for (i = 0; i < 10; i = i + 1) {
+            document.write(i + "<button>Submit</button><br>");
+        }
+    </script>
 </body>
 
 
