--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
             document.write(i + "<button>Submit</button><br>");
         }
     </script>
+    <script>
+        var i;
+        for (i = 0; i < 10; i = i + 1) {
+            if (i == 4)
+                continue;
+            document.write(i + "<button>Submit</button><br>");
+        }
+    </script>
 </body>
 
 
