--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
             document.write(i + "<button>Submit</button><br>");
         }
     </script>
+    <script>
+        var i;
+        for (i = 0; i < 10; i = i + 1) {
+            if (i == 4) {
+                break;
+            }
+            document.write(i + "<button>Submit</button><br>");
+        }
+    </script>
 </body>
 
 
