--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
             document.write(i + "<button>Submit</button><br>");
         }
     </script>
+    <script>
+        var i = 0;
+        while (i < 3) {
+            document.write(i + "While loop");
+            i = i + 1
+        }
+
+    </script>
+    <script>
+        var i = 0;
+        do {
+            document.write(i + "do while loop");
+            i = i + 1
+        } while (i < 3)
+    </script>
 </body>
 
 
