--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
         }
         addTwoNumber(234, 234);
     </script>
+    <script>
+        function addNumber(n1, n2) {
+            return n1 + n2
+        }
+        var newValue = addNumber(2, 3)
+        document.write(newValue)
+    </script>
 </body>
 
 
