--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
         var newValue = addNumber(2, 3)
         document.write(newValue)
     </script>
+    <script>
+        var Product = {
+            Name: "Laptop",
+            Price: "23K",
+            Brand: "HP",
+
+        }
+        document.write(Product.Name)
+        document.write(Product["Price"])
+    </script>
 </body>
 
 
