--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         document.write(Product.Name)
         document.write(Product["Price"])
     </script>
+    <script>
+        
+    </script>
 </body>
 
 
