--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         document.write(Product["Price"])
     </script>
     <script>
-        hghghghgg
+        hghghghggklkklklkkkkkkkkkkkk
         
     </script>
 </body>
