--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
         hghghghggklkklklkkkkkkkkkkkk
         
     </script>
+    <script>
+        package
+        pageXOffset
+    </script>
 </body>
 
 
