for in loop in array

--- a/index.html
+++ b/index.html
@@ -148,12 +148,18 @@
         document.write(Product["Price"])
     </script>
     <script>
-        hghghghggklkklklkkkkkkkkkkkk
-        
+        var category =["Allium","Apple", "mango","Orange"]
+        var i;
+        for(i=0;i<category.length;i=i+1){
+            document.write(category[i]+'<br>')
+        }
     </script>
     <script>
-        package
-        pageXOffset
+         var category =["Allium","Apple", "mango","Orange"]
+         for(var bostu in category){
+            document.write(category[bostu])
+         }
+
     </script>
 </body>
 
