--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
             document.write(Person[item]+"<br>")
         }
     </script>
+    <script>
+        var arr1 =["labib","loison","lafanga"];
+        var arr2 =["lutuput","noyon","jabir"];
+        var reslut = arr1.concat(arr2);
+        document.write(reslut)
+    </script>
 </body>
 
 
