--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
         var reslut = arr1.concat(arr2);
         document.write(reslut)
     </script>
+    <script>
+        var Title = "This is me"
+        var TitleArray =Array.from(Title);
+        document.write(TitleArray[6])
+    </script>
 </body>
 
 
