--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@
         var TitleArray =Array.from(Title);
         document.write(TitleArray[6])
     </script>
+    <script>
+        var numArray=[32,45,56,57,59,67,25]
+       var result2= numArray.filter(function(item){
+            return item>50
+
+        });
+        document.write(result2);
+        
+    </script>
 </body>
 
 
