--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         var result3= numArray.find(function(value){
             return value>50
         });
-        document.write(result3)+'<br>';
+        document.write(result3);
 
 
         var numArray=[32,45,56,57,59,67,25]
@@ -207,6 +207,12 @@
         });
         document.write(result3);
 
+    </script>
+    <script>
+        var numArray=[65,67,53,87,53,89]
+        numArray.forEach(function(item){
+            document.write(item+"<br/>")
+        });
     </script>
 </body>
 
