include indexof reverse push pop

--- a/index.html
+++ b/index.html
@@ -214,6 +214,38 @@
             document.write(item+"<br/>")
         });
     </script>
+    <script>
+        var arr= [98,84,82,45,67,34];
+        var reslut= arr.includes(98)
+        document.write(reslut);
+
+        var arr= [98,84,82,45,67,34];
+        var reslut= arr.indexOf(12)
+        document.write(reslut);
+
+
+    </script>
+
+    <script>
+        var arr= [98,84,82,45,67,34];
+        var reslut= arr.reverse()
+        document.write(reslut);
+</script>
+<script>
+        var arr= [98,84,82,45,67,34];
+        arr.push(12)
+        arr.push(35)
+        document.write(arr);
+</script>
+<script>
+        var arr= [98,84,82,45,67,34];
+        arr.pop()
+        arr.pop()
+        document.write(arr);
+
+
+
+    </script>
 </body>
 
 
