--- a/index.html
+++ b/index.html
@@ -291,6 +291,39 @@
          numarray.splice(0,0,64)
          document.write(numarray);
     </script>
+    <script>
+        var country = "Bangladesh";
+        document.write(country.charAt(4));
+
+        var country = "Bangladesh";
+        var name = "Samir"
+        document.write(country.concat(name));
+
+        var country2 = "Bangladesh";
+        document.write(country2.indexOf("a"));
+
+        var country = "Bangladesh"
+        document.write(country.lastIndexOf("a"));
+
+        var country = "Bangladesh"
+        document.write(country.replace("Bangla","langla"));
+
+        var country = "Bangladesh"
+        document.write(country.substr(6,3));
+
+        var country = "Bangladesh"
+        document.write(country.substring(6,10));
+
+        var country = "Bangladesh"
+        document.write(country.toUpperCase());
+
+        var country = "Bangladesh"
+        document.write(country.toLowerCase());
+
+        var country = "        This is my motherland Bangladesh           ";
+        var country3=country.trim()
+        document.write(country3.length);
+    </script>
     
 </body>
 
