--- a/index.html
+++ b/index.html
@@ -324,6 +324,28 @@
         var country3=country.trim()
         document.write(country3.length);
     </script>
+
+    <script>
+        var object = new Date();
+        document.write(object.getDate())
+
+         var object = new Date();
+        document.write(object.getDay())
+
+         var object = new Date();
+        document.write(object.getFullYear())
+
+         var object = new Date();
+        document.write(object.getHours())
+
+         var object = new Date();
+        document.write(object.getMinutes())
+
+         var object = new Date();
+        document.write(object.getTime())
+
+        
+    </script>
     
 </body>
 
