--- a/index.html
+++ b/index.html
@@ -457,8 +457,20 @@
         var MyElements = document.getElementsByClassName("myclass");
         MyElements[1].innerHTML = "Ramadan";
     </script>
-    
-</body>
+    <p></p>
+    <button onclick="myFuncton()"> click</button>
 
+
+<script>
+    function myFuncton(){
+        var w = window.open();
+        w.document.open();
+        w.document.write("<h2>Hello World<\h2>");
+        w.document.close();
+    }
+   
+    
+</script>
+</body>
 
 </html>
