--- a/index.html
+++ b/index.html
@@ -531,6 +531,13 @@ src=
 
     }
 </script>
+<!--<h1 class="myclass">Obak valobasa</h1>
+<button onclick="FindElements()">click</button>
+<script>
+    function FindElements(){
+        document.querySelector('.myclass').innerHTML="H1 manupualted";
+    }
+</script>-->
 </body>
 
 </html>
